--- a/css/grid_productos.css
+++ b/css/grid_productos.css
@@ -51,7 +51,7 @@
 
 /* MEDIA QUERIES */
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1200px) {
     .item1 {
         grid-column: 1 / 3;
     }
@@ -62,7 +62,7 @@
 }
 
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
     .grid-container {
         grid-template-columns: 100%;
     }
@@ -74,6 +74,37 @@
     .item4 {
         grid-column: inherit;
     }
+}
 
+@media only screen and (max-width: 600px) {  /* grid se transforma en flex */
+    .grid-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1px 1px;
+        width: 100%;
+    }
 
+    .grid-item img {
+        display: none;
+    }
+
+    .grid-item a {
+        display: inline-block;
+        position: relative;
+        top: -10px;
+        height: 100%;
+        width: 100%;
+
+    }
+
+    .grid-item{
+        width: 100%;
+        max-width: none;
+        border: 2px solid black;
+    }
+
+    div #titulo {
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
 }
