--- a/css/acordes.css
+++ b/css/acordes.css
@@ -2,12 +2,14 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     align-content: center;
     justify-items: center;
     gap: 80px 5px;
     padding: 10px;
     background-color: transparent;
+    gap: 1rem;
+    grid-template-rows:1fr 2fr 1.5fr 1.fr;
     /* border: 2px solid blue; */
 }
 
@@ -38,11 +40,11 @@
 
 .grid-item:hover img {
     opacity: 1;
-    cursor: url(../img/guitar_blpick.cur), auto;
+    cursor: url(../Imagenes/guitar_blpick.cur), auto;
 }
 
 .grid-item:hover a {
-    cursor: url(../img/guitar_blpick.cur), auto;
+    cursor: url(../Imagenes/guitar_blpick.cur), auto;
 }
 
 .grid-item p {
@@ -130,7 +132,7 @@ body {
     background-size: cover;
     /* background-repeat: repeat-y; */
     background-attachment: fixed;
-    cursor: url(../img/cursor.cur), default;
+    cursor: url(../Imagenes/cursor.cur), default;
 }
 
 h1,
@@ -194,7 +196,7 @@ nav a:hover {
     color: rgba(37, 37, 37, 0.925);
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
-    cursor: url(../img/guitar-pick-cur.cur), auto;
+    cursor: url(../Imagenes/guitar-pick-cur.cur), auto;
 }
 
 
@@ -215,7 +217,7 @@ nav a:hover {
     display: none;
     height: 100%;
     width: 30px;
-    cursor: url(../img/guitar-pick-cur.cur), auto;
+    cursor: url(../Imagenes/guitar-pick-cur.cur), auto;
     /* flex-direction: column; */
     justify-content: center;
     align-items: center;
