corregidos links de cursores

--- a/css/acordes.css
+++ b/css/acordes.css
@@ -40,11 +40,11 @@
 
 .grid-item:hover img {
     opacity: 1;
-    cursor: url(../Imagenes/guitar_blpick.cur), auto;
+    cursor: url(../img/guitar_blpick.cur), auto;
 }
 
 .grid-item:hover a {
-    cursor: url(../Imagenes/guitar_blpick.cur), auto;
+    cursor: url(../img/guitar_blpick.cur), auto;
 }
 
 .grid-item p {
@@ -132,7 +132,7 @@ body {
     background-size: cover;
     /* background-repeat: repeat-y; */
     background-attachment: fixed;
-    cursor: url(../Imagenes/cursor.cur), default;
+    cursor: url(../img/cursor.cur), default;
 }
 
 h1,
@@ -196,7 +196,7 @@ nav a:hover {
     color: rgba(37, 37, 37, 0.925);
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
-    cursor: url(../Imagenes/guitar-pick-cur.cur), auto;
+    cursor: url(../img/guitar-pick-cur.cur), auto;
 }
 
 
@@ -217,7 +217,7 @@ nav a:hover {
     display: none;
     height: 100%;
     width: 30px;
-    cursor: url(../Imagenes/guitar-pick-cur.cur), auto;
+    cursor: url(../img/guitar-pick-cur.cur), auto;
     /* flex-direction: column; */
     justify-content: center;
     align-items: center;
