--- a/css/productos.css
+++ b/css/productos.css
@@ -129,7 +129,7 @@
 body {
     margin: 0;
     height: 100%;
-    background: url(../fondos/fondo_strato_04.jpg);
+    background: url(../fondos/productos.jpg);
     background-size: cover;
     /* background-repeat: repeat-y; */
     background-attachment: fixed;
