--- a/css/acordes.css
+++ b/css/acordes.css
@@ -128,7 +128,7 @@
 body {
     margin: 0;
     height: 100%;
-    background: url(../fondos/fondo_strato_04.jpg);
+    background: url(../fondos/fondo_guit_02.png);
     background-size: cover;
     /* background-repeat: repeat-y; */
     background-attachment: fixed;
