--- a/css/acordes.css
+++ b/css/acordes.css
@@ -148,6 +148,15 @@ h2 {
     text-align: center;
 }
 
+.clickEscuchar {
+    /* text-align: center; */
+    font-style: italic;
+    color: rgba(255, 255, 255, 0.575);
+    text-shadow: 1px 1px rgb(0, 0, 0);
+    padding-left: 10px;
+}
+
+
 .logo {
     font-family: 'Metal Mania', cursive;
     margin-top: 0%;
@@ -417,7 +426,8 @@ input[type="text"] {
     text-decoration: underline;
 }
 
-.btnBusc, input[type="reset"] {
+.btnBusc,
+input[type="reset"] {
     border-radius: 5px;
     border: none;
     padding: 2px 10px;
@@ -433,7 +443,8 @@ input[type="text"] {
     background-color: #1668c4;
 }
 
-.btnBusc:hover, input[type="reset"]:hover {
+.btnBusc:hover,
+input[type="reset"]:hover {
     opacity: 1;
 }
 
