--- a/css/contactos.css
+++ b/css/contactos.css
@@ -76,6 +76,7 @@
     .item4 {
         grid-column: inherit;
     }
+   
 }
 
 @media only screen and (max-width: 600px) {
@@ -378,154 +379,174 @@ footer a:hover {
     }
 }
 
+.ifrMapa {
+    border-radius: 20px;
+    width: 600px; 
+    height: 450px;
+}
 
-.mapa{
+/* .mapa {
     margin: auto;
     margin-top: 590px;
     margin-bottom: 100px;
     margin-block-end: 100px;
-   top: 130px;
-   left: 100px;
-   position: absolute;
-  }
-  
-  
-  .contact_form{
-    margin: auto;
-    width: 460px;
-    height: 1000PX;
-    margin: 100px auto;
-    bottom: 100px ;
+    top: 130px;
+    left: 100px;
+    position: absolute;
+} */
+
+
+.contact_form {
+    /* margin: auto; */
+    width: 30vw;
+    /* width: 460px; */
+    min-width: 300px;
+    /* height: 1000PX; */
+    /* margin: 100px auto; */
+    /* bottom: 100px;
     left: 200px;
-    margin-left: 800px;
+    margin-left: 800px; */
     border-radius: 10px;
-    top: 0px;
-    padding-top: 180px;
-    padding-bottom: 20px;
-    background-color: #fbfbfb;
-    padding-left: 30px;
+    margin-bottom: 20px;
+    /* top: 0px; */
+    padding-top: 5px;
+    padding-bottom: 2px;
+    background-color: #fbfbfb9c;
+    padding-left: 5%;
+    padding-right: 5%;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    position: relative
-  }
-  
-  
-  
-  input{
-    background-color: #fbfbfb; 
-    width: 408px; 
-    height: 40px; 
-    border-radius: 5px;  
-    border-style: solid; 
-    border-width: 1px; 
-    border-color: #070707; 
-    margin-top: 10px;  
+    /* position: relative */
+}
+
+
+
+input {
+    background-color: #fbfbfb;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #070707;
+    margin-top: 10px;
+    padding-left: 8px;
+    margin-bottom: 20px;
+}
+
+
+textarea {
+    background-color: #fbfbfb;
+    width: 90%;
+    height: 150px;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ab4493;
+    margin-top: 10px;
     padding-left: 10px;
-    margin-bottom: 20px; 
-  }
-  
-  
-  textarea{
-    background-color: #fbfbfb; 
-    width: 405px; 
-    height: 150px; 
-    border-radius: 5px;  
-    border-style: solid; 
-    border-width: 1px; 
-    border-color: #ab4493; 
-    margin-top: 10px;  
-    padding-left: 10px;
-    margin-bottom: 20px; 
-    padding-top: 15px; 
-  }
-  
-  
-  label{
-    display: block; 
-    float: center;  
-  }
-  
-  
-  button{
-    height: 45px; 
+    margin-bottom: 20px;
+    padding-top: 15px;
+}
+
+
+label {
+    display: block;
+    float: center;
+}
+
+
+button {
+    height: 45px;
     padding-left: 5px;
-    padding-right: 5px;   
-    margin-bottom: 20px; 
-    margin-top: 10px;   
+    padding-right: 5px;
+    margin-bottom: 20px;
+    margin-top: 10px;
     text-transform: uppercase;
-    background-color: #ab4493; 
-    border-color: #ab4493; 
-    border-style: solid; 
-    border-radius: 10px;  
-    width: 420px;   
+    background-color: #ab4493;
+    border-color: #ab4493;
+    border-style: solid;
+    border-radius: 10px;
+    width: 100%;
     cursor: pointer;
-  }
-  
-  
-  button p{
-    color: #fff; 
-  }
-  
-  
-  span{
-    color: #ab4493; 
-  }
-  
-  
-  .aviso{
-    font-size: 13px;  
+}
+
+
+button p {
+    color: #fff;
+}
+
+
+span {
+    color: #ab4493;
+}
+
+
+.aviso {
+    font-size: 13px;
     color: #0e0e0e;
-    margin-bottom: 50px;    
-  }
-  
-  
-  
-  
-  h3{
-    font-size: 16px; 
+    margin-bottom: 50px;
+}
+
+
+
+
+h3 {
+    font-size: 16px;
     padding-bottom: 30px;
-    color: #0e0e0e;   
-  }
-  
-  
- 
-  
-  ::-webkit-input-placeholder {
-   color: #a8a8a8;
-  }
-  
-  
-  ::-webkit-textarea-placeholder {
-   color: 
-   #a8a8a8;
-  }
-  
-  
-  .formulario input:focus{
-    outline:0;
+    color: #0e0e0e;
+}
+
+
+
+
+::-webkit-input-placeholder {
+    color: #a8a8a8;
+}
+
+
+::-webkit-textarea-placeholder {
+    color:
+        #a8a8a8;
+}
+
+
+.formulario input:focus {
+    outline: 0;
     border: 1px solid #97d848;
-  }
-  
-  
-  .formulario textarea:focus{
-    outline:0;
+}
+
+
+.formulario textarea:focus {
+    outline: 0;
     border: 1px solid #97d848;
-  }
-  
-  
-  /* ----- -----  Estilos para Validacion ----- ----- */
-  .formulario__grupo-correcto .formulario__validacion-estado {
-      color: #1ed12d;
-      opacity: 1;
-  }
-  
-  .formulario__grupo-incorrecto .formulario__label {
-      color: #bb2929;
-  }
-  
-  
-  .formulario__grupo-incorrecto .formulario__input {
-      border: 3px solid #bb2929;
-  }
+}
+
+
+/* ----- -----  Estilos para Validacion ----- ----- */
+.formulario__grupo-correcto .formulario__validacion-estado {
+    color: #1ed12d;
+    opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__label {
+    color: #bb2929;
+}
+
+
+.formulario__grupo-incorrecto .formulario__input {
+    border: 3px solid #bb2929;
+}
+
+
+/* RESPONSIVE */
+
+.flex-container-contacto {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
+    justify-content: space-around;
+    /* color: white; */
+}
