--- a/css/contactos.css
+++ b/css/contactos.css
@@ -381,7 +381,7 @@ footer a:hover {
 
 .ifrMapa {
     border-radius: 20px;
-    width: 600px; 
+    width: 550px; 
     height: 450px;
 }
 
@@ -549,4 +549,12 @@ h3 {
     flex-wrap: wrap-reverse;
     justify-content: space-around;
     /* color: white; */
+}
+
+@media only screen and (max-width: 600px) {
+    .ifrMapa {
+        width: 30vw;
+        min-width: 300px;
+        height: 250px;
+    }
 }
